@@ -5,6 +5,7 @@
 #include "../common/spdat.h"
 
 #define	HIGHEST_RESIST 9 //Max resist type value
+#define MAX_SPELL_PROJECTILE 10 //Max amount of spell projectiles that can be active by a single mob.
 
 /* solar: macros for IsAttackAllowed, IsBeneficialAllowed */
 #define _CLIENT(x) (x && x->IsClient() && !x->CastToClient()->IsBecomeNPC())
