@@ -276,6 +276,14 @@ Mob::Mob(const char* in_name,
 	casting_spell_inventory_slot = 0;
 	target = 0;
 
+	for (int i = 0; i < MAX_SPELL_PROJECTILE; i++) { projectile_spell_id[i] = 0; }
+	for (int i = 0; i < MAX_SPELL_PROJECTILE; i++) { projectile_target_id[i] = 0; }
+	for (int i = 0; i < MAX_SPELL_PROJECTILE; i++) { projectile_increment[i] = 0; }
+	for (int i = 0; i < MAX_SPELL_PROJECTILE; i++) { projectile_x[i] = 0; }
+	for (int i = 0; i < MAX_SPELL_PROJECTILE; i++) { projectile_y[i] = 0; }
+	for (int i = 0; i < MAX_SPELL_PROJECTILE; i++) { projectile_z[i] = 0; }
+	projectile_timer.Disable();
+
 	memset(&itembonuses, 0, sizeof(StatBonuses));
 	memset(&spellbonuses, 0, sizeof(StatBonuses));
 	memset(&aabonuses, 0, sizeof(StatBonuses));
@@ -4357,6 +4365,49 @@ bool Mob::TryReflectSpell(uint32 spell_id)
 
 	return false;
 }
+
+void Mob::SpellProjectileEffect()
+{
+	bool time_disable = false;
+
+	for (int i = 0; i < MAX_SPELL_PROJECTILE; i++) {
+
+		if (projectile_increment[i] == 0){
+			continue;
+		}
+
+		Mob* target = entity_list.GetMobID(projectile_target_id[i]);
+		
+		float dist = 0;
+		
+		if (target) 
+				dist = target->CalculateDistance(projectile_x[i], projectile_y[i],  projectile_z[i]);
+	
+		int increment_end = 0;
+		increment_end = (dist / 10) - 1; //This pretty accurately determines end time for speed for 1.5 and timer of 250 ms
+
+		if (increment_end <= projectile_increment[i]){
+
+			if (target && IsValidSpell(projectile_spell_id[i]))
+				SpellOnTarget(projectile_spell_id[i], target, false, true, spells[projectile_spell_id[i]].ResistDiff, true);
+
+			projectile_spell_id[i] = 0;
+			projectile_target_id[i] = 0;
+			projectile_x[i] = 0, projectile_y[i] = 0, projectile_z[i] = 0;
+			projectile_increment[i] = 0;
+			time_disable = true;
+		}
+
+		else {
+			projectile_increment[i]++;
+			time_disable = false;
+		}
+	}
+
+	if (time_disable)
+		projectile_timer.Disable();
+}
+
 
 void Mob::DoGravityEffect()
 {
