@@ -659,6 +659,9 @@ bool NPC::Process()
 			viral_timer_counter = 0;
 	}
 
+	if(projectile_timer.Check())
+		SpellProjectileEffect();
+
 	if(spellbonuses.GravityEffect == 1) {
 		if(gravity_timer.Check())
 			DoGravityEffect();
